--- a/ClientApp/src/custom.scss
+++ b/ClientApp/src/custom.scss
@@ -1,5 +1,5 @@
 :root {
-  font: 36px / 1 sans-serif;
+  font: 24px / 1 sans-serif;
   font-family: Lucida, Helvetica, sans-serif;
   color: slategray;
 }
@@ -18,4 +18,39 @@ body {
 .container {
   border: 1rem inset indianred;
   padding-left: 1rem;
+}
+
+.header {
+  background: #f3f3f3;
+  font-size: 48px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  margin-bottom: 20px;
+  padding: 3rem;
+}
+
+.navbar {
+  background: rgb(168, 208, 243);
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  margin-bottom: 20px;
+  padding-left: 0rem;
+}
+
+.navbar li {
+  list-style: none;
+}
+
+.navbar a {
+  font-size: 16px;
+  font-weight: bold;
+  margin-left: 15px;
+  line-height: 25px;
+}
+
+.navbar a:hover {
+  color: #4183c4;
+  cursor: pointer;
 }
