good stopping place for input css

--- a/ClientApp/src/custom.scss
+++ b/ClientApp/src/custom.scss
@@ -76,7 +76,7 @@ form {
   align-items: center;
   width: 50%;
   // margin: 1rem;
-  border: rgb(119, 26, 26) 2rem;
+  //border: rgb(119, 26, 26) 2rem;
 }
 
 .book-input {
